--- a/msvc/core.vcxproj.filters
+++ b/msvc/core.vcxproj.filters
@@ -9,9 +9,6 @@
       <UniqueIdentifier>{142a5325-573c-4fde-9d8f-af10cb6e28e5}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
-    <Filter Include="Source Files\gl_core_3_3">
-      <UniqueIdentifier>{00bb1f12-70c3-4c4e-b2c6-646d5a89aa8e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\n64video">
       <UniqueIdentifier>{201fc67f-a10c-47a3-a9f6-47b9ccdf155a}</UniqueIdentifier>
     </Filter>
@@ -28,9 +25,6 @@
     </ClCompile>
     <ClCompile Include="..\src\core\n64video.c">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\gl_core_3_3\gl_core_3_3.c">
-      <Filter>Source Files\gl_core_3_3</Filter>
     </ClCompile>
     <ClCompile Include="..\src\core\n64video\rdp\blender.c">
       <Filter>Source Files\n64video\rdp</Filter>
@@ -92,6 +86,9 @@
     <ClCompile Include="..\src\core\n64video\vi.c">
       <Filter>Source Files\n64video</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\core\gl_core_3_3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\core\common.h">
@@ -109,13 +106,12 @@
     <ClInclude Include="..\src\core\n64video.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\core\gl_core_3_3\gl_core_3_3.h">
-      <Filter>Source Files\gl_core_3_3</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\core\vdac.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\core\gl.h" />
+    <ClInclude Include="..\src\core\gl_core_3_3.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\core\version.h.in">
